Add new projects to portfolio

--- a/project.html
+++ b/project.html
@@ -25,7 +25,12 @@
                                 <p>Hosted Link: <a href="hlo ji">example.com/ecommerce</a></p>
                                 <p>GitHub Link: <a href="ki hallchal">github.com/hlo/ecomerce</a></p>
                             </li>
-                           
+                            <li>
+                                <h3>Friendly Chat AppFriendly</h3>
+                                <p>Friendly Chat- An Android application making use of firebase,to help people connect and chat by sending messages and images,also having login options.</p>
+                                <p>Hosted Link: <a href="hnji jnab">example.com/blog</a> </p>
+                                <p>GitHub Link: <a href="kida phir">github.com/hlo/blog</a></p>
+                            </li>
                             <li>
                                 <h3>Secure Messenger AppSecure</h3>
                                 <p>Secure Messenger App- AnAndroid appication to have secure communication between the semder and recipient, using a number ofcryptography aldorithms like AES,DES,RSA techineques for</p>
